--- a/index.html
+++ b/index.html
@@ -435,10 +435,13 @@
                   I am a Product Designer and Frontend Developer, I fully understand the process of design and development of a digital product, my job is to make a product usable and visually appealing, through the Design Thinking methodology I manage to create products that are endearing to users.
                 </p>
               </div>
-
-              <div class="about_me__list-img">
-
-              </div>
+              <img src="images/about_me/photo1.png" alt="" class="about_me__img photo1">
+            </div>
+            <div class="about_me__list-item">
+              <img src="images/about_me/photo2.png" alt="" class="about_me__img photo2">
+              <p class="about_me__text text2">
+                I am passionate about never stop learning, I am constantly training and learning about new and changing technology trends that way I bring an updated opinion of the Tech industry.
+              </p>
             </div>
           </div>
         </div>
