--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/resposive.css" />
 </head>
 
 <body>
@@ -133,7 +134,7 @@
           <img src="images/star.svg" alt="star" class="rates__image" />
           <div class="rates__list-item">
             <p class="rates__item-title">>2k</p>
-            <p class="rates__item-description">In Finished Works</p>
+            <p class="rates__item-description">In Finished <br> Works</p>
           </div>
         </div>
       </div>
@@ -407,8 +408,8 @@
             <img src="images/Zig Zag.png" alt="zig zag" class="about_me__zigzag">
           </div>
           <p class="about_me__text text1">
-            I am a Product Designer and Frontend Developer, I fully understand the process of design and development of
-            a digital product, my job is to make a product usable and visually appealing, through the Design Thinking
+            I am a <span class="text__gradient1">Product Designer</span> and Frontend Developer, I fully understand the process of design and development of
+            a digital product, my job is to make a product usable and visually appealing, through the <span class="text__gradient1">Design Thinking</span>
             methodology I manage to create products that are endearing to users.
           </p>
         </div>
@@ -416,14 +417,14 @@
         <img src="images/about_me/photo2.png" alt="" class="about_me__img photo2">
         <div class="about_me__text-wrapper2">
           <p class="about_me__text text2">
-            I am passionate about never stop learning, I am constantly training and learning about new and changing
-            technology trends that way I bring an updated opinion of the Tech industry.
+            I am passionate about <span class="text__gradient2">never stop learning</span>, I am constantly training and learning about new and changing
+            <span class="text__gradient2">technology</span> trends that way I bring an updated opinion of the Tech industry.
           </p>
         </div>
         <div class="about_me__text-wrapper3">
           <p class="about_me__text text3">
-            My full name is Cristian David Muñoz Camayo and more than what I said before I am a dreamer, I am proudly
-            Colombian and in me you will find a human being with the desire to do his best to help others.
+            My full name is <span class="text__gradient3">Cristian David Muñoz Camayo</span> and more than what I said before I am a dreamer, I am proudly
+            <span class="text__gradient4">Colombian</span> and in me you will find a human being with the desire to do his best to help others.
           </p>
         </div>
         <img src="images/about_me/photo3.png" alt="" class="about_me_img">
